--- a/config.toml
+++ b/config.toml
@@ -1,4 +1,58 @@
 baseurl = "http://replace-this-with-your-hugo-site.com/"
 languageCode = "en-us"
 title = "JT's Bucket List"
-theme = "hyde"
+theme = "introduction"
+enforce_ssl         = "your-url.com"
+builddrafts         = false
+canonifyurls        = true
+contentdir          = "content"
+layoutdir           = "layouts"
+publishdir          = "public"
+# disqusshortname   = "xxx" # Enable Disqus for comments
+# googleAnalytics   = "xxx"
+
+[permalinks]
+fixed = ":title/"
+blog  = "blog/:slug/"
+
+[params]
+author        = "Jason Theobald" 
+opening       = "The bucket list"
+firstname     = "Jason" # First name shows in introduction on main page
+tagline       = "#lifegoals"
+introheight   = "medium" # Input either 'medium' or 'large' or 'fullheight'
+theme         = "light" # Choose 'light' or 'dark'
+avatar        = "img/profile.png" # Path to image in static folder eg. img/avatar.png 
+localtime     = true # Show your current local time in contact section
+timezone      = "America/Los_Angeles" # Your timezone as in the TZ* column of this list: https://en.wikipedia.org/wiki/List_of_tz_database_time_zones
+dateform      = "Jan 2, 2006"
+dateformfull  = "Mon Jan 2 2006 15:04:05 EST"
+cachebuster   = true # Add the current unix timestamp in query string for cache busting css assets
+description   = "Website Description"
+faviconfile   = "img/fav.ico"
+highlightjs   = true # Syntax highlighting
+lang          = "en"
+footertext    = "" # Text to show in footer (overrides default text)
+fadein        = false # Turn on/off the fade-in effect
+
+showblog        = true # Show Blog section on home page
+showallposts    = false # Set 'true' to list all posts on home page, or set 'false' to link to separate blog list page
+showlatest      = true # Show latest blog post summary
+sharebuttons    = true # On post pages, show share this social buttons
+
+showprojects    = true # Show Projects section on home page
+
+# Social icons appear in introduction and contact section. Add as many more as you like.
+# Find icon names here: http://fontawesome.io/cheatsheet/
+
+#[[params.social]]
+#url = "https://twitter.com/"
+#icon = "twitter"
+
+[[params.social]]
+url = "https://www.facebook.com/jason.s.theobald"
+icon = "facebook"
+
+[[params.social]]
+url = "https://www.linkedin.com/in/jasonstheobald"
+icon = "linkedin"
