--- a/config.toml
+++ b/config.toml
@@ -1,8 +1,8 @@
 baseurl = "http://bucketlist.netlify.com/"
 languageCode = "en-us"
-title = "JT's Bucket List"
+title = "The Bucket List"
 theme = "introduction"
-enforce_ssl         = "jtbucketlist.netlify.com"
+enforce_ssl         = "bucketlist.netlify.com"
 builddrafts         = false
 canonifyurls        = true
 contentdir          = "content"
