--- a/config.toml
+++ b/config.toml
@@ -37,12 +37,12 @@ highlightjs   = true # Syntax highlighting
 lang          = "en"
 footertext    = "" # Text to show in footer (overrides default text)
 fadein        = false # Turn on/off the fade-in effect
-showblog        = true # Show Blog section on home page
-showallposts    = false # Set 'true' to list all posts on home page, or set 'false' to link to separate blog list page
-showlatest      = true # Show latest blog post summary
-sharebuttons    = false # On post pages, show share this social buttons
-showprojects    = true # Show Projects section on home page
-extracssfiles   = ["/css/main.css"]
+showblog      = true # Show Blog section on home page
+showallposts  = false # Set 'true' to list all posts on home page, or set 'false' to link to separate blog list page
+showlatest    = true # Show latest blog post summary
+sharebuttons  = false # On post pages, show share this social buttons
+showabout     = false # Show Projects section on home page
+extracssfiles = ["/css/main.css"]
 
 # Social icons appear in introduction and contact section. Add as many more as you like.
 # Find icon names here: http://fontawesome.io/cheatsheet/
